# DAQ-EngeSpec

./: .gitignore  31P_dd_Run52_10MeV_Si  EngeSpec.py  Prerequisites.txt  Readme.org  TODO.org  engespec_build.py  hpge_cal.csv  nai_cal.csv  packup  testboost.py
QtDesigner/: LENAFracFitGUI.py  LENAFracFitGUI.py.bkup  LENAFracFitGUI.ui
images/icons/: convertCommand
lib/: 88SrSort.cpp  88SrSort.h  CMakeLists.txt  EngeAnalyzer.cpp  EngeAnalyzer.h  EngeAnalyzerlib.cpp  EngeAnalyzerlib.h  EngeSort.cpp  EngeSort.h  LenaSort.cpp  LenaSort.h  MDPPEventHandler.cpp  MDPPEventHandler.h  MDPPSort.cpp  MDPPSort.h  MDPPSort_CI.cpp  MakeData.cpp  MakeData.h  MakeDatalib.cpp  RBSSort.cpp  SiliconSort.cpp  SiliconSort.h  mdpp-setup_template.toml  mdpp_module_config.cpp  mdpp_module_config.h  nai_csv_template.csv  v1730EngeSort.cpp  v1730EngeSort.cpp.bkup  v1730EngeSort.h  v1730EngeSort.h.bkup  v1730Sort.cpp  v1730Sort.h
modules/: .#SpectrumCanvas.py  Events.py  FitEvents.py  FitObject.py  NewViews.py  SpectrumCanvas.py  SpectrumCanvasQt.py  SpectrumCollection.py  SpectrumHandlers.py  TkFrames.py  ViewScreen.py  Views-old.py  Views.py
spectra/16k/: MakeSpec.R
spectra/435_SING_temps/: 2350_12cpg_SING.datWHAT  25mg_0_2M_SING.datWHAT  25mg_2545_2M_SING.datWHAT  25mg_417_2M_SING.datWHAT  25mg_4192_2M_SING.datWHAT  25mg_4599_2M_SING.datWHAT  25mg_4705_2M_SING.datWHAT  25mg_4952_2M_SING.datWHAT  25mg_5007_2M_SING.datWHAT  25mg_5676_2M_SING.datWHAT  25mg_5692_2M_SING.datWHAT  25mg_5916_2M_SING.datWHAT  background_SING.datWHAT
utilities/: Create2D.py
